--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@ EditorStartupMap=/Game/Maps/TitleMap.TitleMap
 GlobalDefaultGameMode="/Script/NetworkCPlus.NetworkCPlusGameMode"
 TransitionMap=/Game/Maps/TransitionMap.TransitionMap
 ServerDefaultMap=/Game/Maps/LobbyMap.LobbyMap
+GameInstanceClass=/Script/NetworkCPlus.MyGameInstance
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
